# triton

./: .gitignore  .travis.yml  Doxygen_config  README.md  classes.html  deconfig  index.html  pages.html
controls/: CMakeLists.txt  README.md  package.xml  setup.py
controls/fsfb/: README.md  fsfb1.slx
controls/pid_controller/: package.xml
controls/pid_controller/scripts/: dynamic_control.py
controls/pid_controller/src/: PID.py
controls/scripts/: check_kf_filter.py  dynamic_control  kalman_filter.py
controls/scripts/simulink_controller/: pid_simulink.slx
controls/src/: __init__.py
d1/d8f/: autotoc_md5.html
d1/d9e/: vision_2README_8md_source.html
d3/de1/: autotoc_md51.html
d6/dfb/: classdynamic__control_1_1controlPID.html
d7/dd8/: autotoc_md72.html
d7/ded/: hardware_2README_8md_source.html
db/d28/: classsrc_1_1PID_1_1PIDRegulator-members.html
decisions/: README.md
docs/: readme.md
docs/html/: annotated.html  dir_017e37f331d39ac469006a497eb26908.html  dir_017e37f331d39ac469006a497eb26908.js  dir_2dcece1e52a8306539af45489f2937ef.html  dir_3d370fd2770cf63261b7ee5a69ee79d2.html  dir_6e746fa64bd4650c9256d4345006a187.html  dir_6e746fa64bd4650c9256d4345006a187.js  dir_8f98bb5d252fce26547300c79b8066d3.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  dir_f4316de2dfb04db90651672103de31d6.html  files.html  navtreedata.js  navtreeindex0.js
docs/html/d0/d20/: readme_8md_source.html
docs/html/d0/db0/: autotoc_md97.html
docs/html/search/: all_0.js  all_1.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  pages_7.js
docs/latex/: annotated.tex  dir_017e37f331d39ac469006a497eb26908.tex  dir_2dcece1e52a8306539af45489f2937ef.tex  dir_3d370fd2770cf63261b7ee5a69ee79d2.tex  dir_6e746fa64bd4650c9256d4345006a187.tex  refman.tex
documentation/: custom.css
documentation/html/: annotated.html  annotated_dup.js  classes.html  dir_017e37f331d39ac469006a497eb26908.html  dir_094696d64bf9042e34c4ff3938c71239.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_1de39abd879d35b248e366a9414e7abb.html  dir_2dcece1e52a8306539af45489f2937ef.html  dir_2dcece1e52a8306539af45489f2937ef.js  dir_3affa4ffaa5b89ad23374e60b37b4893.html  dir_3d370fd2770cf63261b7ee5a69ee79d2.html  dir_3d370fd2770cf63261b7ee5a69ee79d2.js  dir_58ea3b1c18e6e6119f3f3f7035947f16.html  dir_6e746fa64bd4650c9256d4345006a187.html  dir_8f98bb5d252fce26547300c79b8066d3.html  dir_945d07cab3a1b9a3433b23cead346aa1.html  dir_96b3c4e2b24a32131e4d60f0e748d091.html  dir_bd6468cf242e0cd60ee60b5a67d06fd2.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  dir_e9762682675063e6e9351d6300437ae0.html  dir_ed58e9b5331f38683c5801771ed0cfb7.html  dir_f40e2058dc7d3824a1d7da5c244b57a9.html  dir_f4316de2dfb04db90651672103de31d6.html  dir_f527178ce0c6556a0d165dd5ce6c551e.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  menudata.js  pages.html
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+39 more)
documentation/latex/: annotated.tex  files.tex  hierarchy.tex  refman.tex
documentation/partials/: header.html
fsfb/: README.md
hardware/: README.md
mapping/: README.md
mapping/my_odom/: CMakeLists.txt  package.xml
mapping/my_odom/scripts/: odom-message-generator.py
mapping/robot_localization/launch/: ekf_template.launch
mapping/robot_localization/params/: ekf_template.yaml
mapping/slam_package/: CMakeLists.txt  package.xml
mapping/slam_package/include/: conf.h  ekf1.h  mapping_main.h  util.h
mapping/slam_package/msg/: visionmsg.msg
mapping/slam_package/src/: fake_odom.py  mapping_main.cpp  mapping_node.cpp  slam_node.cpp
pid_controller/: CMakeLists.txt
pid_controller/scripts/: dynamic_control.py
pid_controller/src/: PID.py  __init__.py
search/: pages_0.js  pages_2.js  pages_3.js  pages_8.js  searchdata.js
underwater_simulation/: README.md
underwater_simulation/underwater_vehicle_dynamics/launch/: UWSim_g500_dynamics.launch
utils/: README.md  travis_build.sh
vision/: README.md
vision/bridge/: CMakeLists.txt  package.xml
vision/bridge/src/: bridge.cpp
vision/buoy_tasks/: package.xml  readme.md
vision/torpedo_task/: CMakeLists.txt  package.xml  readme.md
vision/vision_pipeline/: CMakeLists.txt  package.xml  torpedo.cpp
vision/vision_pipeline/src/: detect.cpp  hist.cpp  path_detect.cpp
vision/vision_tasks/: CMakeLists.txt  package.xml  readme.md
vision/vision_tasks/buoy_task/: CMakeLists.txt  readme.md
vision/vision_tasks/src/: buoy_detect.cpp  buoy_tracker.cpp  path_detect.cpp  torpedo.cpp
(+183 files in other folders)
